report positive, mark positive, swagger and some test
